--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">YOUR_DOMAIN</domain>
-    </domain-config>
+<domain-config cleartextTrafficPermitted="true">
+    <domain includeSubdomains="true">YOUR_DOMAIN</domain>
+    <domain includeSubdomains="true">ANOTHER_DOMAIN</domain>
+    <!-- Contoh -->
+    <domain includeSubdomains="true">www.khilman.com</domain>
+</domain-config>
 </network-security-config>
